# box2d.qml

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  QUICK_REFERENCE.md  README.md  TUTORIAL.md  box2d.pro  build.sh
.github/: copilot-instructions.md
app/: CMakeLists.txt
app/qml/: Ball.qml  Car.qml  CarDemo.qml  FilterJointDemo.qml  Flipper.qml  MotorJointDemo.qml  MyWorld.qml  PinballDemo.qml  Pivot.qml  Wall.qml  Wheel.qml  main.qml
app/src/: main.cpp
doc/: box2d-classes.plantuml  creation-order.md
examples/: CMakeLists.txt
examples/boxes/: main.cpp  main.qml
lib/: CMakeLists.txt
lib/src/: qb2_fwd.h  qb2body.cpp  qb2body.h  qb2chain.cpp  qb2chain.h  qb2fixture.cpp  qb2fixture.h  qb2joint.cpp  qb2joint.h  qb2qmlmodule.cpp  qb2qmlmodule.h  qb2scene.cpp  qb2scene.h  qb2shape.cpp  qb2shape.h  qb2shaperenderer.cpp  qb2shaperenderer.h  qb2world.cpp  qb2world.h
lib/src/joints/: qb2distancejoint.cpp  qb2distancejoint.h  qb2filterjoint.cpp  qb2filterjoint.h  qb2joint.cpp  qb2joint.h  qb2motorjoint.cpp  qb2motorjoint.h  qb2prismaticjoint.cpp  qb2prismaticjoint.h  qb2revolutejoint.cpp  qb2revolutejoint.h  qb2weldjoint.cpp  qb2weldjoint.h  qb2wheeljoint.cpp  qb2wheeljoint.h
lib/src/shapes/: qb2boxshape.cpp  qb2boxshape.h  qb2capsuleshape.cpp  qb2capsuleshape.h  qb2chainshape.cpp  qb2chainshape.h  qb2circleshape.cpp  qb2circleshape.h  qb2polygonshape.cpp  qb2polygonshape.h  qb2segmentshape.cpp  qb2segmentshape.h  qb2shape.cpp  qb2shape.h
src/: CMakeLists.txt  box2dbody.cpp  box2dbody.h  box2dbox.cpp  box2dbox.h  box2dcircle.cpp  box2dcircle.h  box2dcontact.cpp  box2dcontact.h  box2ddebugdraw.cpp  box2ddebugdraw.h  box2dfixture.cpp  box2dfixture.h  box2dplugin.cpp  box2dplugin.h  box2dpolygon.cpp  box2dpolygon.h  box2dworld.cpp  box2dworld.h  qmldir
src/qml/: Ball.qml  Bumper.qml  CurvedRamp.qml  DropTarget.qml  Flipper.qml  Gate.qml  KickoutHole.qml  Magnet.qml  PinballDemo.qml  Pivot.qml  Plunger.qml  Rollover.qml  Slingshot.qml  Spinner.qml
